feat: add controllers
Add cloud-node, cloud-node-lifecycle controllers.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 #
+/charts/proxmox-cloud-controller-manager/values-dev.yaml
 /proxmox-cloud-controller-manager*
 /kubeconfig
+/proxmox-config.yaml
 #
