ci: add github checks
Add github actions checks.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,14 +1,9 @@
-name: Build edge
+name: Release
 
 on:
   push:
-    branches:
-      - main
-    paths:
-      - 'go.mod'
-      - 'go.sum'
-      - 'cmd/**'
-      - 'pkg/**'
+    tags:
+      - 'v*'
 
 jobs:
   build-publish:
@@ -20,6 +15,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Unshallow
+        run: git fetch --prune --unshallow
 
       - name: Set up docker buildx
         run: make docker-init
@@ -33,6 +30,4 @@ jobs:
       - name: Build and push
         run: make images
         env:
-          USERNAME: ${{ github.repository_owner }}
           PUSH: "true"
-          TAG: "edge"
