--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -26,9 +26,11 @@ jobs:
           go-version-file: 'go.mod'
           cache: true
 
-      - name: Build
-        run: make build
       - name: Lint
         uses: golangci/golangci-lint-action@v3
         with:
           args: --config=.golangci.yml
+      - name: Unit
+        run: make unit
+      - name: Build
+        run: make build
