--- a/docs/deploy/cloud-controller-manager.yml
+++ b/docs/deploy/cloud-controller-manager.yml
@@ -5,10 +5,10 @@ kind: ServiceAccount
 metadata:
   name: proxmox-cloud-controller-manager
   labels:
-    helm.sh/chart: proxmox-cloud-controller-manager-0.1.0
+    helm.sh/chart: proxmox-cloud-controller-manager-0.1.2
     app.kubernetes.io/name: proxmox-cloud-controller-manager
     app.kubernetes.io/instance: proxmox-cloud-controller-manager
-    app.kubernetes.io/version: "0.0.1"
+    app.kubernetes.io/version: "v0.0.1"
     app.kubernetes.io/managed-by: Helm
   namespace: kube-system
 ---
@@ -18,10 +18,10 @@ kind: Secret
 metadata:
   name: proxmox-cloud-controller-manager
   labels:
-    helm.sh/chart: proxmox-cloud-controller-manager-0.1.0
+    helm.sh/chart: proxmox-cloud-controller-manager-0.1.2
     app.kubernetes.io/name: proxmox-cloud-controller-manager
     app.kubernetes.io/instance: proxmox-cloud-controller-manager
-    app.kubernetes.io/version: "0.0.1"
+    app.kubernetes.io/version: "v0.0.1"
     app.kubernetes.io/managed-by: Helm
   namespace: kube-system
 data:
@@ -33,10 +33,10 @@ kind: ClusterRole
 metadata:
   name: system:proxmox-cloud-controller-manager
   labels:
-    helm.sh/chart: proxmox-cloud-controller-manager-0.1.0
+    helm.sh/chart: proxmox-cloud-controller-manager-0.1.2
     app.kubernetes.io/name: proxmox-cloud-controller-manager
     app.kubernetes.io/instance: proxmox-cloud-controller-manager
-    app.kubernetes.io/version: "0.0.1"
+    app.kubernetes.io/version: "v0.0.1"
     app.kubernetes.io/managed-by: Helm
 rules:
 - apiGroups:
@@ -121,10 +121,10 @@ kind: Deployment
 metadata:
   name: proxmox-cloud-controller-manager
   labels:
-    helm.sh/chart: proxmox-cloud-controller-manager-0.1.0
+    helm.sh/chart: proxmox-cloud-controller-manager-0.1.2
     app.kubernetes.io/name: proxmox-cloud-controller-manager
     app.kubernetes.io/instance: proxmox-cloud-controller-manager
-    app.kubernetes.io/version: "0.0.1"
+    app.kubernetes.io/version: "v0.0.1"
     app.kubernetes.io/managed-by: Helm
   namespace: kube-system
 spec:
