--- a/charts/proxmox-cloud-controller-manager/templates/secrets.yaml
+++ b/charts/proxmox-cloud-controller-manager/templates/secrets.yaml
@@ -1,3 +1,4 @@
+{{- if ne (len .Values.config.clusters) 0 }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -7,3 +8,4 @@ metadata:
   namespace: {{ .Release.Namespace }}
 data:
   config.yaml: {{ toYaml .Values.config | b64enc | quote }}
+{{- end }}
