--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -49,4 +49,4 @@ jobs:
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.5.0
         env:
-          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          CR_TOKEN: "${{ secrets.BOT_GITHUB_TOKEN }}"
