--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,36 +4,9 @@ on:
   push:
     tags:
       - 'v*'
-    branches:
-      - devops/github-actions-helm-repo
 
 jobs:
-  build-publish:
-    name: "Build image and publish"
-    runs-on: ubuntu-22.04
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Unshallow
-        run: git fetch --prune --unshallow
-
-      - name: Set up docker buildx
-        run: make docker-init
-      - name: Github registry login
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and push
-        run: make images
-        env:
-          PUSH: "true"
-  release:
+  helm-release:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
