--- a/charts/proxmox-cloud-controller-manager/Chart.yaml
+++ b/charts/proxmox-cloud-controller-manager/Chart.yaml
@@ -9,13 +9,13 @@ sources:
 keywords:
 - ccm
 maintainers:
-- name: sergelogvinov
-  url: https://github.com/sergelogvinov
+- name: Hex Trust DevOps Team
+  url: https://github.com/orgs/hextrust/teams/hextrust-devops-leads
 
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.4-test
+version: 0.0.1
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
