chore: bump deps
Update k8s to 0.27.4

Signed-off-by: Serge Logvinov <serge.logvinov@sinextra.dev>

--- a/charts/proxmox-cloud-controller-manager/values.yaml
+++ b/charts/proxmox-cloud-controller-manager/values.yaml
@@ -84,7 +84,7 @@ securityContext:
   seccompProfile:
     type: RuntimeDefault
 
-# -- Resizer resource requests and limits.
+# -- Resource requests and limits.
 # ref: https://kubernetes.io/docs/user-guide/compute-resources/
 resources:
   # We usually recommend not to specify default resources and to leave this as a conscious
