feat: cosign images
It helps to check that image was build in github-actions.

Signed-off-by: Serge Logvinov <serge.logvinov@sinextra.dev>

--- a/.github/workflows/charts.yaml
+++ b/.github/workflows/charts.yaml
@@ -10,6 +10,7 @@ on:
 jobs:
   helm-lint:
     name: Helm chart check
+    timeout-minutes: 5
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout
@@ -19,7 +20,7 @@ jobs:
 
       - name: Install chart-testing tools
         id: lint
-        uses: helm/chart-testing-action@v2.3.1
+        uses: helm/chart-testing-action@v2.4.0
 
       - name: Run helm chart linter
         run: ct --config hack/ct.yml lint
