--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -14,6 +14,7 @@ on:
 jobs:
   build:
     name: Build
+    timeout-minutes: 15
     runs-on: ubuntu-22.04
     permissions:
       contents: read
@@ -22,17 +23,18 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up go
-        uses: actions/setup-go@v3
+        timeout-minutes: 5
+        uses: actions/setup-go@v4
         with:
           go-version-file: 'go.mod'
-          cache: true
 
       - name: Lint
         uses: golangci/golangci-lint-action@v3
         with:
-          version: v1.52.2
+          version: v1.53.3
           args: --config=.golangci.yml
       - name: Unit
         run: make unit
       - name: Build
+        timeout-minutes: 10
         run: make build
