--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,18 +8,23 @@ on:
 jobs:
   build-publish:
     name: "Build image and publish"
+    timeout-minutes: 15
     runs-on: ubuntu-22.04
     permissions:
       contents: read
       packages: write
+      id-token: write
     steps:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Unshallow
         run: git fetch --prune --unshallow
 
+      - name: Install Cosign
+        uses: sigstore/cosign-installer@v3.1.1
       - name: Set up docker buildx
         run: make docker-init
+
       - name: Github registry login
         uses: docker/login-action@v2
         with:
@@ -28,6 +33,10 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
+        timeout-minutes: 10
         run: make images
         env:
           PUSH: "true"
+      - name: Sign images
+        timeout-minutes: 4
+        run: make images-cosign
