feat(chart): add extraVolumes + extraVolumeMounts
Adds extraVolumes / extraVolumeMounts to the Helm chart. Allows to, for example, mount a custom CA to `/etc/ssl/certs/ca-certificates.crt`, to avoid having to use `insecure: true`.

Fixes #65.

Signed-off-by: Philipp Born <git@pborn.eu>

--- a/charts/proxmox-cloud-controller-manager/templates/deployment.yaml
+++ b/charts/proxmox-cloud-controller-manager/templates/deployment.yaml
@@ -66,6 +66,9 @@ spec:
             - name: cloud-config
               mountPath: /etc/proxmox
               readOnly: true
+            {{- with .Values.extraVolumeMounts }}
+            {{- toYaml . | nindent 12 }}
+            {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
@@ -99,4 +102,7 @@ spec:
           secret:
             secretName: {{ include "proxmox-cloud-controller-manager.fullname" . }}
             defaultMode: 416
+        {{- end }}
+        {{- with .Values.extraVolumes }}
+        {{- toYaml . | nindent 8 }}
         {{- end }}
