chore: replace nodeSelector with nodeAffinity in chart + manifests
Some K8s distributions might label control-plane nodes with
```
node-role.kubernetes.io/control-plane: "true"
```
rather than
```
node-role.kubernetes.io/control-plane: ""
```
which makes the default `nodeSelector` fail. Replacing it with a `affinity.nodeAffinity` nodeSelector fixes it.

--- a/charts/proxmox-cloud-controller-manager/ci/values.yaml
+++ b/charts/proxmox-cloud-controller-manager/ci/values.yaml
@@ -1,11 +1,15 @@
-
 image:
   repository: ghcr.io/sergelogvinov/proxmox-cloud-controller-manager
   pullPolicy: Always
   tag: edge
 
-nodeSelector:
-  node-role.kubernetes.io/control-plane: ""
+affinity:
+  nodeAffinity:
+    requiredDuringSchedulingIgnoredDuringExecution:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: node-role.kubernetes.io/control-plane
+          operator: Exists
 
 logVerbosityLevel: 4
 
