--- a/charts/proxmox-cloud-controller-manager/values.talos.yaml
+++ b/charts/proxmox-cloud-controller-manager/values.talos.yaml
@@ -1,6 +1,10 @@
-
-nodeSelector:
-  node-role.kubernetes.io/control-plane: ""
+affinity:
+  nodeAffinity:
+    requiredDuringSchedulingIgnoredDuringExecution:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: node-role.kubernetes.io/control-plane
+          operator: Exists
 
 logVerbosityLevel: 4
 
