--- a/docs/deploy/cloud-controller-manager-talos.yml
+++ b/docs/deploy/cloud-controller-manager-talos.yml
@@ -172,8 +172,13 @@ spec:
             - name: cloud-config
               mountPath: /etc/proxmox
               readOnly: true
-      nodeSelector:
-        node-role.kubernetes.io/control-plane: ""
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: node-role.kubernetes.io/control-plane
+                operator: Exists
       tolerations:
         - effect: NoSchedule
           key: node-role.kubernetes.io/control-plane
