--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,10 +8,10 @@ updates:
     directory: "/"
     commit-message:
       prefix: "chore:"
-    open-pull-requests-limit: 5
+    open-pull-requests-limit: 8
     rebase-strategy: disabled
     schedule:
-      interval: "weekly"
+      interval: "monthly"
       day: "monday"
       time: "08:00"
       timezone: "UTC"
@@ -20,10 +20,10 @@ updates:
     directory: "/"
     commit-message:
       prefix: "chore:"
-    open-pull-requests-limit: 5
+    open-pull-requests-limit: 8
     rebase-strategy: disabled
     schedule:
-      interval: "weekly"
+      interval: "monthly"
       day: "monday"
       time: "07:00"
       timezone: "UTC"
@@ -36,15 +36,17 @@ updates:
           - "k8s.io/client-go"
           - "k8s.io/cloud-provider"
           - "k8s.io/component-base"
+          - "k8s.io/component-helpers"
+          - "k8s.io/controller-manager"
 
   - package-ecosystem: "docker"
     directory: "/"
     commit-message:
       prefix: "chore:"
-    open-pull-requests-limit: 5
+    open-pull-requests-limit: 8
     rebase-strategy: disabled
     schedule:
-      interval: "weekly"
+      interval: "monthly"
       day: "monday"
       time: "07:00"
       timezone: "UTC"
