--- a/.github/workflows/conform.yaml
+++ b/.github/workflows/conform.yaml
@@ -9,7 +9,7 @@ jobs:
   conform:
     name: Conformance
     timeout-minutes: 5
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
