--- a/.github/workflows/release-pre.yaml
+++ b/.github/workflows/release-pre.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
   build-publish:
     name: "Check release docs"
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     if:  startsWith(github.head_ref, 'release-')
     permissions:
       contents: read
