feat(chart): add hostAliases and initContainers
It helps to deploy CCM with load blancer as sidecar.

Signed-off-by: Serge Logvinov <serge.logvinov@sinextra.dev>

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /charts/proxmox-cloud-controller-manager/values-dev.yaml
 /proxmox-cloud-controller-manager*
 /kubeconfig
+/kubeconfig*
 /proxmox-config.yaml
 #
 
