--- a/charts/proxmox-cloud-controller-manager/templates/deployment.yaml
+++ b/charts/proxmox-cloud-controller-manager/templates/deployment.yaml
@@ -24,6 +24,7 @@ spec:
       labels:
         {{- include "proxmox-cloud-controller-manager.selectorLabels" . | nindent 8 }}
     spec:
+      hostNetwork: {{ .Values.hostNetwork }}
       enableServiceLinks: false
       {{- if .Values.priorityClassName }}
       priorityClassName: {{ .Values.priorityClassName }}
