--- a/.github/workflows/build-edge.yaml
+++ b/.github/workflows/build-edge.yaml
@@ -36,7 +36,7 @@ jobs:
         with:
           platforms: arm64
       - name: Set up docker buildx
-        run: make docker-init
+        uses: docker/setup-buildx-action@v3
 
       - name: Github registry login
         uses: docker/login-action@v3
