--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,7 +21,7 @@ jobs:
         run: git fetch --prune --unshallow
 
       - name: Install Cosign
-        uses: sigstore/cosign-installer@v3.4.0
+        uses: sigstore/cosign-installer@v3.5.0
       - name: Set up docker buildx
         run: make docker-init
 
@@ -31,6 +31,18 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push edge
+        timeout-minutes: 10
+        run: make images
+        env:
+          PUSH: "true"
+          TAG: "edge"
+      - name: Sign images
+        timeout-minutes: 4
+        run: make images-cosign
+        env:
+          TAG: "edge"
 
       - name: Build and push
         timeout-minutes: 10
