--- a/charts/proxmox-cloud-controller-manager/Chart.yaml
+++ b/charts/proxmox-cloud-controller-manager/Chart.yaml
@@ -3,7 +3,7 @@ name: proxmox-cloud-controller-manager
 description: A Helm chart for Kubernetes
 type: application
 home: https://github.com/sergelogvinov/proxmox-cloud-controller-manager
-icon: https://proxmox.com/templates/yoo_nano2/favicon.ico
+icon: https://proxmox.com/favicon.ico
 sources:
   - https://github.com/sergelogvinov/proxmox-cloud-controller-manager
 keywords:
@@ -14,9 +14,9 @@ maintainers:
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.2.4
+version: 0.2.5
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: v0.4.2
+appVersion: v0.5.0
