--- a/docs/deploy/cloud-controller-manager-daemonset.yml
+++ b/docs/deploy/cloud-controller-manager-daemonset.yml
@@ -5,10 +5,10 @@ kind: ServiceAccount
 metadata:
   name: proxmox-cloud-controller-manager
   labels:
-    helm.sh/chart: proxmox-cloud-controller-manager-0.2.3
+    helm.sh/chart: proxmox-cloud-controller-manager-0.2.5
     app.kubernetes.io/name: proxmox-cloud-controller-manager
     app.kubernetes.io/instance: proxmox-cloud-controller-manager
-    app.kubernetes.io/version: "v0.4.2"
+    app.kubernetes.io/version: "v0.5.0"
     app.kubernetes.io/managed-by: Helm
   namespace: kube-system
 ---
@@ -18,10 +18,10 @@ kind: ClusterRole
 metadata:
   name: system:proxmox-cloud-controller-manager
   labels:
-    helm.sh/chart: proxmox-cloud-controller-manager-0.2.3
+    helm.sh/chart: proxmox-cloud-controller-manager-0.2.5
     app.kubernetes.io/name: proxmox-cloud-controller-manager
     app.kubernetes.io/instance: proxmox-cloud-controller-manager
-    app.kubernetes.io/version: "v0.4.2"
+    app.kubernetes.io/version: "v0.5.0"
     app.kubernetes.io/managed-by: Helm
 rules:
 - apiGroups:
@@ -106,10 +106,10 @@ kind: DaemonSet
 metadata:
   name: proxmox-cloud-controller-manager
   labels:
-    helm.sh/chart: proxmox-cloud-controller-manager-0.2.3
+    helm.sh/chart: proxmox-cloud-controller-manager-0.2.5
     app.kubernetes.io/name: proxmox-cloud-controller-manager
     app.kubernetes.io/instance: proxmox-cloud-controller-manager
-    app.kubernetes.io/version: "v0.4.2"
+    app.kubernetes.io/version: "v0.5.0"
     app.kubernetes.io/managed-by: Helm
   namespace: kube-system
 spec:
@@ -149,7 +149,7 @@ spec:
               - ALL
             seccompProfile:
               type: RuntimeDefault
-          image: "ghcr.io/sergelogvinov/proxmox-cloud-controller-manager:v0.4.2"
+          image: "ghcr.io/sergelogvinov/proxmox-cloud-controller-manager:v0.5.0"
           imagePullPolicy: IfNotPresent
           args:
             - --v=2
@@ -159,10 +159,15 @@ spec:
             - --leader-elect-resource-name=cloud-controller-manager-proxmox
             - --use-service-account-credentials
             - --secure-port=10258
+            - --authorization-always-allow-paths=/healthz,/livez,/readyz,/metrics
+          ports:
+            - name: metrics
+              containerPort: 10258
+              protocol: TCP
           livenessProbe:
             httpGet:
               path: /healthz
-              port: 10258
+              port: metrics
               scheme: HTTPS
             initialDelaySeconds: 20
             periodSeconds: 30
