--- a/charts/proxmox-cloud-controller-manager/ci/values.yaml
+++ b/charts/proxmox-cloud-controller-manager/ci/values.yaml
@@ -7,11 +7,15 @@ affinity:
   nodeAffinity:
     requiredDuringSchedulingIgnoredDuringExecution:
       nodeSelectorTerms:
-      - matchExpressions:
-        - key: node-role.kubernetes.io/control-plane
-          operator: Exists
+        - matchExpressions:
+            - key: node-role.kubernetes.io/control-plane
+              operator: Exists
 
 logVerbosityLevel: 4
+
+extraEnvs:
+  - name: KUBERNETES_SERVICE_HOST
+    value: 127.0.0.1
 
 enabledControllers:
   - cloud-node
