fix: makefile conformance stage
Add make conformance command.

Signed-off-by: Serge Logvinov <serge.logvinov@sinextra.dev>

--- a/.conform.yaml
+++ b/.conform.yaml
@@ -9,10 +9,9 @@ policies:
       body:
         required: true
       dco: true
-      gpg: false
       spellcheck:
         locale: US
-      maximumOfOneCommit: false
+      maximumOfOneCommit: true
       conventional:
         types:
           - build
