--- a/.github/workflows/release-pre.yaml
+++ b/.github/workflows/release-pre.yaml
@@ -20,13 +20,13 @@ jobs:
         run: git fetch --prune --unshallow
 
       - name: Release version
-        shell: bash
-        id: release
-        run: |
-          echo "TAG=v${GITHUB_HEAD_REF:8}" >> "$GITHUB_ENV"
+        if: startsWith(github.head_ref, 'release-please')
+        run: jq -r '"TAG=v"+.[]' hack/release-please-manifest.json >> "$GITHUB_ENV"
 
       - name: Helm docs
         uses: gabe565/setup-helm-docs-action@v1
+        with:
+          version: v1.11.3
 
       - name: Generate
         run: make docs
